--- a/src/DashAgil/DashAgil.Infra.Data/DashAgil.Infra.Data.csproj
+++ b/src/DashAgil/DashAgil.Infra.Data/DashAgil.Infra.Data.csproj
@@ -5,13 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Dapper.contrib" Version="2.0.78" />
     <PackageReference Include="MySqlConnector" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Repositorio\" />
     <Folder Include="Queries\" />
     <Folder Include="Settings\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DashAgil\DashAgil.csproj" />
   </ItemGroup>
 
 </Project>
