--- a/src/DashAgil.Integrador/DashAgil.Integrador.Api/appsettings.json
+++ b/src/DashAgil.Integrador/DashAgil.Integrador.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "ConnectionString": {
-    "Connection": "Server=MYSQL5035.site4now.net;Database=db_a114c8_dashagi;Uid=a114c8_dashagi;Pwd=marcos01"
+  "ConnectionStrings": {
+    //"Connection": "Server=MYSQL5035.site4now.net;Database=db_a114c8_dashagi;Uid=a114c8_dashagi;Pwd=marcos01",
+    "Connection": "Server=(localdb)\\mssqllocaldb;Database=DashAgil;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -12,5 +13,19 @@
   "AllowedHosts": "*",
   "AppSettings": {
     "RunEach": 30 //Minutes
+  },
+  "DevopsSettings": {
+    "RendimentoId": "34jfdtz62gx7wdec4gon6ivle4lbiqxptypte32sf734h43hxcka",
+    "CorporativoId": "x3ndledawelhkp3jen4klvwygsj2ovbhdilwm224exu5dbk3d2ga",
+    "Queries": {
+      "AllWorkItens": "Select * From WorkItems order by [System.CreatedDate] desc"
+    },
+    "EndPointsDevops": {
+      "URI": "http://tfs/",
+      "Projetos": "{0}/_apis/projects?api-version=5.1",
+      "Boards": "{0}/{1}/{2}/_apis/work/boards?api-version=5.1",
+      "WorkItemTypes": "{0}/{1}/{2}/_apis/work/boards?api-version=5.1",
+      "WorkItemByQuery": "{0}/_apis/wit/wiql?api-version=5.1"
+    }
   }
 }
