--- a/src/DashAgil.Integrador/DashAgil.Integrador.DevOps/DashAgil.Integrador.DevOps.csproj
+++ b/src/DashAgil.Integrador/DashAgil.Integrador.DevOps/DashAgil.Integrador.DevOps.csproj
@@ -10,8 +10,16 @@
     <Folder Include="Entidades\" />
     <Folder Include="Enums\" />
     <Folder Include="Handlers\" />
-    <Folder Include="Queries\" />
-    <Folder Include="Repositorio\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DashAgil.Integrador.Infra.Data\DashAgil.Integrador.Infra.Data.csproj" />
+    <ProjectReference Include="..\DashAgil.Integrador\DashAgil.Integrador.csproj" />
   </ItemGroup>
 
 </Project>
