--- a/src/DashAgil.Integrador/DashAgil.Integrador.Infra.Data/DashAgil.Integrador.Infra.Data.csproj
+++ b/src/DashAgil.Integrador/DashAgil.Integrador.Infra.Data/DashAgil.Integrador.Infra.Data.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageReference Include="MySqlConnector" Version="1.2.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
