--- a/src/DashAgil.Integrador/DashAgil.Integrador/DashAgil.Integrador.csproj
+++ b/src/DashAgil.Integrador/DashAgil.Integrador/DashAgil.Integrador.csproj
@@ -7,14 +7,15 @@
   <ItemGroup>
     <Folder Include="Enums\" />
     <Folder Include="Queries\" />
-    <Folder Include="Repositorio\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Flunt" Version="1.0.5" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DashAgil.Integrador.Infra.Data\DashAgil.Integrador.Infra.Data.csproj" />
     <ProjectReference Include="..\DashAgil.Integrador.Infra\DashAgil.Integrador.Infra.csproj" />
   </ItemGroup>
 
