--- a/src/DashAgil/DashAgil.Infra.Data/DashAgil.Infra.Data.csproj
+++ b/src/DashAgil/DashAgil.Infra.Data/DashAgil.Infra.Data.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="Dapper.contrib" Version="2.0.78" />
     <PackageReference Include="MySqlConnector" Version="1.2.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
   <ItemGroup>
