--- a/src/DashAgil.Web/package.json
+++ b/src/DashAgil.Web/package.json
@@ -37,6 +37,7 @@
     "@types/d3-shape": "^1.3.2",
     "acorn": "^8.0.1",
     "angular-gauge": "^3.1.3",
+    "angular-notifier": "^6.0.1",
     "apexcharts": "^3.20.1",
     "bootstrap": "^4.5.0",
     "browser-sync": "^2.26.12",
