--- a/src/DashAgil.Integrador/DashAgil.Integrador.Api/appsettings.json
+++ b/src/DashAgil.Integrador/DashAgil.Integrador.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"Connection": "Server=MYSQL5035.site4now.net;Database=db_a114c8_dashagi;Uid=a114c8_dashagi;Pwd=marcos01",
-    "Connection": "Server=(localdb)\\mssqllocaldb;Database=DashAgil;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Connection": "Data Source=dash-agil.cprqt430hrk7.sa-east-1.rds.amazonaws.com;Initial Catalog=DashAgil;User ID=admin;Password=kAg3nHVCExd2dDHwf7pN;Integrated Security=False;"
   },
   "Logging": {
     "LogLevel": {
