--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,9 +49,12 @@ jobs:
         working-directory: src/DashAgil
 
       - name: Zip Package
-        run: |
-          cd ${{ github.workspace }}/out 
-          zip -r ${{ github.workspace }}/out.zip *
+#        run: |
+#          cd ${{ github.workspace }}/out 
+#          zip -r ${{ github.workspace }}/out.zip *
+
+        run: zip -r '${{ github.workspace }}/out.zip *'
+        working-directory: '${{ github.workspace }}/out'
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v13
