--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,16 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
+        
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 3.1.301
+          
       - name: Install dependencies
         run: dotnet restore
         working-directory: src/DashAgil
@@ -51,12 +53,10 @@ jobs:
         working-directory: src/DashAgil
 
       - name: Zip Package
-#        run: |
-#          cd ${{ github.workspace }}/out 
-#          zip -r ${{ github.workspace }}/out.zip *
-        
-        run : zip -r ${{  github.workspace }} ./  -x  *.git*
-        working-directory: '${{ github.workspace }}/out'
+        run: |
+          cd ${{ github.workspace }}/out 
+          zip -r ${{ github.workspace }}/out.zip *
+
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v13
