--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,10 @@ env:
   EB_ENVIRONMENT_NAME       : "Dashagil-env"
   DEPLOY_PACKAGE_NAME       : "aws-dashagil-app-${{ github.sha }}.zip"
   AWS_REGION_NAME           : "sa-east-1"
+  
+  AWS_KEY_ID                : "AKIA2K345HPHLCQRQI7X"
+  AWS_SECRET_KEY            : "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"
+
 
 on:
   push:
@@ -67,8 +71,8 @@ jobs:
       - name: Configure my AWS Credentils
         uses: aws-actions/configure-aws-credentials@v1
         with:
-         aws-access-key-id    : ${{ secrets.MY_AWS_ACCESS_KEY }}
-         aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
+         aws-access-key-id    : ${{ env.AWS_KEY_ID }}
+         aws-secret-access-key: ${{ env.AWS_SECRET_KEY }}
          aws-region           : ${{ env.AWS_REGION_NAME }}
 
       - name: Create new ElasticBeanstalk Applicaiton Version
