--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
           zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./  -x  *.git*
 
       - name: Copy our Deployment package to S3 bucket
-        run : aws s3 cp DashAgil/${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME}}/
+        run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME}}/
          
       - name: Print nice message on completion of CI Pipeline
         run : echo "CI Pipeline part finished successfully"
@@ -84,7 +84,7 @@ jobs:
         run : |
          aws elasticbeanstalk create-application-version \
          --application-name ${{ env.EB_APPLICATION_NAME }} \
-         --source-bundle S3Bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}",S3Key="DashAgil/${{ env.DEPLOY_PACKAGE_NAME }}" \
+         --source-bundle S3Bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}",S3Key="${{ env.DEPLOY_PACKAGE_NAME }}" \
          --version-label "Ver-${{ github.sha }}" \
          --description "CommitSHA-${{ github.sha }}"
       - name: Deploy our new Application Version
