--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,10 +64,10 @@ jobs:
       - name: Zip Package
         run: |
           cd ${{ github.workspace }}/out 
-          zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./  -x  *.git*
+          zip -r ${{ github.workspace }}/out.zip *
 
       - name: Copy our Deployment package to S3 bucket
-        run : aws s3 cp ${{ github.workspace }}/${{ env.DEPLOY_PACKAGE_NAME }} s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME}}/
+        run : aws s3 cp ${{ github.workspace }}/out.zip s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME}}/DashAgil/
          
       - name: Print nice message on completion of CI Pipeline
         run : echo "CI Pipeline part finished successfully"
