--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,15 @@ jobs:
           cd ${{ github.workspace }}/out 
           zip -r ${{ github.workspace }}/out.zip *
 
+
+      - name: Configure my AWS Credentils
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+         aws-access-key-id    : ${{ env.AWS_KEY_ID }}
+         aws-secret-access-key: ${{ env.AWS_SECRET_KEY }}
+         aws-region           : ${{ env.AWS_REGION_NAME }}
+
+
       - name: Copy our Deployment package to S3 bucket
         run : aws s3 cp ${{ github.workspace }}/out.zip s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME}}/DashAgil/
          
