--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ name: CI-CD Pipelines
 env:
   EB_PACKAGE_S3_BUCKET_NAME : "elasticbeanstalk-sa-east-1-710542179278"
   EB_APPLICATION_NAME       : "DashAgil"
-  EB_ENVIRONMENT_NAME       : "Dashagil-env"
+  EB_ENVIRONMENT_NAME       : "Dashagil-env-1"
   DEPLOY_PACKAGE_NAME       : "aws-dashagil-app-${{ github.sha }}.zip"
   AWS_REGION_NAME           : "sa-east-1"
   
