--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,16 +8,6 @@
 #---------------------------------------------------------------------
 
 name: CI-CD Pipelines
-env:
-  EB_PACKAGE_S3_BUCKET_NAME : "elasticbeanstalk-sa-east-1-710542179278"
-  EB_APPLICATION_NAME       : "DashAgil"
-  EB_ENVIRONMENT_NAME       : "Dashagil-env-1"
-  DEPLOY_PACKAGE_NAME       : "aws-dashagil-app-${{ github.sha }}.zip"
-  AWS_REGION_NAME           : "sa-east-1"
-  
-  AWS_KEY_ID                : "AKIA2K345HPHLCQRQI7X"
-  AWS_SECRET_KEY            : "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"
-
 
 on:
   push:
@@ -65,39 +55,14 @@ jobs:
         run: |
           cd ${{ github.workspace }}/out 
           zip -r ${{ github.workspace }}/out.zip *
-
-
-      - name: Configure my AWS Credentils
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v13
         with:
-         aws-access-key-id    : ${{ env.AWS_KEY_ID }}
-         aws-secret-access-key: ${{ env.AWS_SECRET_KEY }}
-         aws-region           : ${{ env.AWS_REGION_NAME }}
-
-
-      - name: Copy our Deployment package to S3 bucket
-        run : aws s3 cp ${{ github.workspace }}/out.zip s3://${{ env.EB_PACKAGE_S3_BUCKET_NAME}}/DashAgil/
-         
-      - name: Print nice message on completion of CI Pipeline
-        run : echo "CI Pipeline part finished successfully"
-
-
-      - name: Configure my AWS Credentils
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-         aws-access-key-id    : ${{ env.AWS_KEY_ID }}
-         aws-secret-access-key: ${{ env.AWS_SECRET_KEY }}
-         aws-region           : ${{ env.AWS_REGION_NAME }}
-
-      - name: Create new ElasticBeanstalk Applicaiton Version
-        run : |
-         aws elasticbeanstalk create-application-version \
-         --application-name ${{ env.EB_APPLICATION_NAME }} \
-         --source-bundle S3Bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}",S3Key="DashAgil/out.zip" \
-         --version-label "Ver-${{ github.sha }}" \
-         --description "CommitSHA-${{ github.sha }}"
-      - name: Deploy our new Application Version
-        run : aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIRONMENT_NAME }} --version-label "Ver-${{ github.sha }}"
-
-      - name: Print nice message on completion of CD Pipeline
-        run : echo "CD Pipeline part finished successfully"  
+          aws_access_key: AKIA2K345HPHLCQRQI7X
+          aws_secret_key: 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
+          application_name: DashAgil
+          environment_name: Dashagil-env-1
+          region: sa-east-1
+          version_label: ${{ github.run_id }}
+          version_description: ${{ github.sha }}
+          deployment_package: ${{ github.workspace }}/out.zip
