--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -43,28 +43,23 @@ jobs:
     - run: npm run build
       working-directory: src/DashAgil.Web
       
-    - run: npm test
-      working-directory: src/DashAgil.Web
+#    - run: npm test
+#      working-directory: src/DashAgil.Web
       
       env:
         CI: true
 
-#      - name: Publish
-#        run: dotnet publish -c Release -o '${{ github.workspace }}/out'
-#        working-directory: src/DashAgil/DashAgil.Api
-
-#      - name: Zip Package
-#        run: |
-#          cd ${{ github.workspace }}/out 
-#          zip -r ${{ github.workspace }}/out.zip *
-#      - name: Deploy to EB
-#        uses: einaregilsson/beanstalk-deploy@v13
-#        with:
-#          aws_access_key: AKIA2K345HPHLCQRQI7X
-#          aws_secret_key: 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
-#          application_name: DashAgil
-#          environment_name: Dashagil-env-1
-#          region: sa-east-1
-#          version_label: ${{ github.run_id }}
-#          version_description: ${{ github.sha }}
-#          deployment_package: ${{ github.workspace }}/out.zip
+    - name: Generate deployment package
+      run: zip -r deploy.zip * -x "**node_modules**"
+    
+    - name: Deploy to EB
+      uses: einaregilsson/beanstalk-deploy@v13
+      with:
+        aws_access_key: AKIA2K345HPHLCQRQI7X
+        aws_secret_key: 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
+        application_name: DashAgil
+        environment_name: Dashagil-env
+        region: sa-east-1
+        version_label: ${{ github.run_id }}
+        version_description: ${{ github.sha }}
+        deployment_package: deploy.zip
