--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -58,7 +58,7 @@ jobs:
         aws_access_key: AKIA2K345HPHLCQRQI7X
         aws_secret_key: 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
         application_name: DashAgil
-        environment_name: Dashagil-env
+        environment_name: Dashagil-env-1
         region: sa-east-1
         version_label: ${{ github.run_id }}
         version_description: ${{ github.sha }}
