--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -26,40 +26,58 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [10.x]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - uses: actions/checkout@v1
+    
+    - name: Cache node modules
+      uses: actions/cache@v1
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+#
+    - name: Node ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
+
+    - name: Installing NPM
+      run: npm install
       working-directory: src/DashAgil.Web
-      
-    - run: npm run build
+
+    - name: Building application
+      run: npm run build
       working-directory: src/DashAgil.Web
-      
-#    - run: npm test
-#      working-directory: src/DashAgil.Web
-      
-      env:
-        CI: true
 
     - name: Generate deployment package
       run: zip -r deploy.zip * -x "**node_modules**"
-    
+      working-directory: src/DashAgil.Web
+
+    - name: Get timestamp
+      uses: gerred/actions/current-time@master
+      id: current-time
+
+    - name: Run string replace
+      uses: frabert/replace-string-action@master
+      id: format-time
+      with:
+        pattern: '[:\.]+'
+        string: "${{ steps.current-time.outputs.time }}"
+        replace-with: '-'
+        flags: 'g'
+
     - name: Deploy to EB
-      uses: einaregilsson/beanstalk-deploy@v13
+      uses: einaregilsson/beanstalk-deploy@v3
       with:
         aws_access_key: AKIA2K345HPHLCQRQI7X
         aws_secret_key: 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
         application_name: DashAgil
-        environment_name: Dashagil-env-1
+        environment_name: Dashagil-env
         region: sa-east-1
-        version_label: ${{ github.run_id }}
-        version_description: ${{ github.sha }}
+        version_label: "my-app-${{ steps.format-time.outputs.replaced }}"
         deployment_package: deploy.zip
