--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -80,4 +80,4 @@ jobs:
         environment_name: Dashagil-env-2
         region: sa-east-1
         version_label: "my-app-${{ steps.format-time.outputs.replaced }}"
-        deployment_package: deploy.zip
+        deployment_package: src/DashAgil.Web/deploy.zip
