--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -54,30 +54,31 @@ jobs:
       run: npm run build
       working-directory: src/DashAgil.Web
 
-    - name: Generate deployment package
-      run: zip -r deploy.zip * -x "**node_modules**"
-      working-directory: src/DashAgil.Web
-
-    - name: Get timestamp
-      uses: gerred/actions/current-time@master
-      id: current-time
-
-    - name: Run string replace
-      uses: frabert/replace-string-action@master
-      id: format-time
-      with:
-        pattern: '[:\.]+'
-        string: "${{ steps.current-time.outputs.time }}"
-        replace-with: '-'
-        flags: 'g'
-
-    - name: Deploy to EB
-      uses: einaregilsson/beanstalk-deploy@v13
-      with:
-        aws_access_key: AKIA2K345HPHLCQRQI7X
-        aws_secret_key: FgCU0U9tWR/N1N+zpA7jYlao822h1s9WvQ++iFUM
-        application_name: DashAgil
-        environment_name: Dashagil-env-2
-        region: sa-east-1
-        version_label: "my-app-${{ steps.format-time.outputs.replaced }}"
-        deployment_package: src/DashAgil.Web/deploy.zip
+#    - name: Generate deployment package
+#      run: zip -r deploy.zip * -x "**node_modules**"
+#      working-directory: src/DashAgil.Web
+#
+#    - name: Get timestamp
+#      uses: gerred/actions/current-time@master
+#      id: current-time
+#
+#    - name: Run string replace
+#      uses: frabert/replace-string-action@master
+#      id: format-time
+#      with:
+#        pattern: '[:\.]+'
+#        string: "${{ steps.current-time.outputs.time }}"
+#        replace-with: '-'
+#        flags: 'g'
+#
+#    - name: Deploy to EB
+#      uses: einaregilsson/beanstalk-deploy@v13
+#      with:
+#        aws_access_key:${{secrets.AWS_ACCESS_KEY}}
+#        aws_secret_key:  ${{secrets.AWS_SECRET_KEY}}
+#        application_name: DashAgil
+#        environment_name: Dashagil-env-2
+#        region: sa-east-1
+#        version_label: "my-app-${{ steps.format-time.outputs.replaced }}"
+#        deployment_package: src/DashAgil.Web/deploy.zip
+#
