--- a/src/DashAgil.Integrador/DashAgil.Integrador.Api/appsettings.json
+++ b/src/DashAgil.Integrador/DashAgil.Integrador.Api/appsettings.json
@@ -20,14 +20,18 @@
     "RendimentoId": "34jfdtz62gx7wdec4gon6ivle4lbiqxptypte32sf734h43hxcka",
     "CorporativoId": "x3ndledawelhkp3jen4klvwygsj2ovbhdilwm224exu5dbk3d2ga",
     "Queries": {
-      "AllWorkItens": "Select * From WorkItems order by [System.CreatedDate] desc"
+      "AllEpics": "Select * From WorkItems where [State] <> 'Removed' and [System.WorkItemType] = 'Epic' order by [System.CreatedDate] desc",
+      "AllFeatures": "Select * From WorkItems where [State] <> 'Removed' and [System.WorkItemType] = 'Feature' order by [System.CreatedDate] desc",
+      "AllUS": "Select * From WorkItems where [State] <> 'Removed' and [System.WorkItemType] = 'User Story' order by [System.CreatedDate] desc",
+      "AllTasks": "Select * From WorkItems where [State] <> 'Removed' and [System.WorkItemType] = 'Task' order by [System.CreatedDate] desc"
     },
     "EndPointsDevops": {
       "URI": "http://tfs/",
       "Projetos": "{0}/_apis/projects?api-version=5.1",
       "Boards": "{0}/{1}/{2}/_apis/work/boards?api-version=5.1",
       "WorkItemTypes": "{0}/{1}/{2}/_apis/work/boards?api-version=5.1",
-      "WorkItemByQuery": "{0}/_apis/wit/wiql?api-version=5.1"
+      "WorkItemByQuery": "{0}/_apis/wit/wiql?api-version=5.1",
+      "WorkItemById": "/{0}/{1}/_apis/wit/workitems/{2}?api-version=5.1"
     }
   }
 }
