--- a/src/DashAgil/DashAgil/DashAgil.csproj
+++ b/src/DashAgil/DashAgil/DashAgil.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Flunt" Version="1.0.5" />
     <PackageReference Include="MySqlConnector" Version="1.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Collections.Specialized" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
