--- a/src/DashAgil/DashAgil/DashAgil.csproj
+++ b/src/DashAgil/DashAgil/DashAgil.csproj
@@ -19,4 +19,19 @@
     <Folder Include="Commands\Input\Sprint\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Queries\Email.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Email.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Queries\Email.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Email.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
