update the repositories.

--- a/src/DashAgil.Email/DashAgil.Email.Api/appsettings.json
+++ b/src/DashAgil.Email/DashAgil.Email.Api/appsettings.json
@@ -1,12 +1,13 @@
 {
   "ConnectionString": {
-    "Connection": "Data Source={{server}};Initial Catalog={{database}};User ID={{user}};Password={{pass}};Integrated Security=False;"
+    //"Connection": "Data Source={{server}};Initial Catalog={{database}};User ID={{user}};Password={{pass}};Integrated Security=False;"
+    "Connection": "Server=(LocalDb)\\MSSQLLocalDB;Database=DashAgil;Trusted_Connection=True;"
   },
   "AwsSettings": {
-    "KeyId": "{{aws-keyId}}",
-    "SecretKey": "{{aws-secret-key}}",
-    "ConfigurationSetsName": "{{aws-ses-configurationName}}",
-    "FromAddress": "{{from-address}}"
+    "KeyId": "AKIA2K345HPHC5DLYIXZ",
+    "SecretKey": "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",
+    "ConfigurationSetsName": "SesConfigurationEmail",
+    "FromAddress": "luciano93p@gmail.com"
   },
   "Logging": {
     "LogLevel": {
