--- a/src/DashAgil/DashAgil/DashAgil.csproj
+++ b/src/DashAgil/DashAgil/DashAgil.csproj
@@ -16,7 +16,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Queries\" />
+    <Folder Include="Commands\Input\Sprint\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Queries\Email.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Email.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Queries\Email.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Email.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
