--- a/src/DashAgil.Email/DashAgil.Email.Api/appsettings.json
+++ b/src/DashAgil.Email/DashAgil.Email.Api/appsettings.json
@@ -4,10 +4,10 @@
     "Connection": "Server=(LocalDb)\\MSSQLLocalDB;Database=DashAgil;Trusted_Connection=True;"
   },
   "AwsSettings": {
-    "KeyId": "AKIA2K345HPHC5DLYIXZ",
-    "SecretKey": "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",
-    "ConfigurationSetsName": "SesConfigurationEmail",
-    "FromAddress": "luciano93p@gmail.com"
+    "KeyId": "",
+    "SecretKey": "",
+    "ConfigurationSetsName": "",
+    "FromAddress": ""
   },
   "Logging": {
     "LogLevel": {
